--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My portfolio</title>
-      <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+        <link rel="icon" type="image/icon" href="images/favicon.ico">
       <style>
 
             a:link, a:visited{
@@ -35,12 +37,12 @@
 
     </header>
     <main>
-        <p style="text-align: right;color:darkslateblue; font-family: 'Trebuchet MS'; font-size: 30px">"A party without a cake is really just a meeting"<br>
+        <p style="text-align: right;color:darkslateblue; font-family: 'Trebuchet MS'; font-size: 40px; padding-right: 100px">"A party without a cake is really just a meeting"<br>
         <span style="font-size: 24px"> <i> Julia Child</i></span>
         </p>
         <p>
         <img src="https://scontent.frix3-1.fna.fbcdn.net/v/t1.6435-9/48364072_2270390869640655_2452419024571596800_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=e3f864&_nc_ohc=X0XRZqz8rdIAX-6yU55&tn=c_ynlOcwEQD_8yK1&_nc_ht=scontent.frix3-1.fna&oh=00_AT__eAs30iQGTqBtdIWrwOzD1LoatFToYWn2U3B_RBmy8w&oe=622AFC7D"
-             style="width:432px; height:648px;"
+             style="width:432px; height:648px; padding-left: 50px"
              alt="Two tier cake with butterflies">
         </p>
     </main>
